# CopyOnWrite

./: .gitignore  Cargo.toml  Dockerfile  README.md  init-script.sh
.github/workflows/: ci.yml  docker.yml  linux.yml  macos.yml  release.yml  rust.yml  windows.yml
scripts/: linux-btrfs.sh  linux-ext4.sh  linux-ocfs2.sh  linux-xfs.sh  windows.cmd  windows.ps1
src/: lib.rs  main.rs
src/common/: utils.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
